@@ -1,5 +1,8 @@
 2001-03-24  Mark Kettenis  <kettenis@gnu.org>
 
+	* sysdeps/mach/hurd/i386/bits/sigcontext.h (sc_sp, sc_fp, sc_pc,
+	sc_ps): Define as aliases for sc_uesp, sc_ebl, sc_eip and sc_efl.
+
 	* sysdeps/mach/hurd/i386/init-first.c: Include <assert.h>.
 	(_dl_argv): Declare.
 	(init) [SHARED]: Readjust _dl_argv if we switched to a new stack.
